# py_package1

./: LICENSE  README.md  setup.cfg  tox.ini
src/jtmds/: example.py
src/jtmds_beam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_example.py
