[metadata]
name = jtmds-beam
version = 0.0.1
author = Tennison Yu
author_email = tennison.yu@jumio.com
description = A package to handle DS methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://enter_later.com
project_urls =
    Bug Tracker = https://enter_later.com/bugtracker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
